--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Greetings! I'm Erik, Perpetually curious and<br />
+								<h2 class="alt">Hi! I'm Erik, Perpetually curious and<br />
 									enthusiastic about all things life has to offer.</a></h2>
 								<p>A seasoned professional with over half a decade of dedicated<br />
 									experience in the realms of technology and innovation</p>
