--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 											<ul class="icons">
 												<li><a href="https://twitter.com/IstiakA77447875" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 												<li><a href="https://www.facebook.com/istiakahmedarik" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-												<li><a href="https://github.com/Istiak-Erik" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+												<li><a href="https://github.com/IstiakErik" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 												<li><a href="https://www.instagram.com/istiakahmed.eric/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
